# MiniServe

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/core/: mod.rs  users.rs
src/models/: mod.rs
src/routes/: auth.rs  middleware.rs  mod.rs  verify.rs
